<resources>
    <string name="app_name">Car Fleet Manager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="car_list">Car list</string>
    <string name="map">Map</string>

    <string name="blank">-</string>
    <string name="registration_number">Registration number: </string>
    <string name="registration_number_example">LU 12345</string>
    <string name="brand">Brand: </string>
    <string name="brand_example">Volkswagen</string>
    <string name="model">Model: </string>
    <string name="model_example">Golf</string>
    <string name="year">Year: </string>
    <string name="color">Color: </string>
    <string name="color_example">grey</string>
    <string name="production_date">Production\ndate: </string>
    <string name="production_date_example">__ / __ / ____</string>
    <string name="coordinates">Coordinates: </string>
    <string name="latitude">Latitude: </string>
    <string name="latitude_example">50.754</string>
    <string name="longitude">Longitude: </string>
    <string name="longitude_example">12.2145</string>
    <string name="owner">Owner: </string>
    <string name="owner_example">Jan Kowalski</string>
    <string name="first_name">First name: </string>
    <string name="last_name">Last name: </string>
    <string name="birth_date">Birth date: </string>

    <string name="no_car_data_found">No car data found.</string>
    <string name="no_owner_data_found">No owner data found.</string>
    <string name="back">Back</string>
    <string name="car_color">Car color</string>
    <string name="add_new_car">Add new car</string>
    <string name="select_owner">Select owner</string>
    <string name="select_location">Select location</string>
    <string name="car_details">Car details</string>
    <string name="car_location">Car location</string>
    <string name="chosen_car_location">Chosen car location</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="check_internet_connection">Please check Your Internet connection.</string>
    <string name="check_internet_connection_no_car_data">No car data found. Please check Your Internet connection.</string>
    <string name="check_internet_connection_no_owner_data">No owner data found. Please check Your Internet connection.</string>
    <string name="empty_field_error">This field can\'t be empty.</string>
    <string name="empty_data_saving_error">Some car data is empty. Make sure You have added all car\'s data information.</string>
    <string name="save_successfully">Car saved successfully.</string>
    <string name="saving_error">Error occurred while saving car data.</string>
</resources>