<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/car_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardBackgroundColor="@color/lightCream"
        app:cardCornerRadius="@dimen/_10sdp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/registration_number_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/registration_number_example"
                android:textStyle="bold"
                android:textColor="@color/black"
                android:textSize="@dimen/_22ssp"
                android:textAllCaps="true"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/brand_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/brand_example"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"/>

            <TextView
                android:id="@+id/model_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/model_example"
                android:textColor="@color/black"
                android:textSize="@dimen/_18ssp"
                android:layout_marginBottom="@dimen/_5sdp"/>

            <TextView
                android:id="@+id/color_textView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/color_example"
                android:textColor="@color/black"
                android:textSize="@dimen/_16ssp"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>