<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.addnewcar.AddNewCarFragment"
    android:background="@color/backgroundLightGrey">

    <ImageView
        android:id="@+id/back_imageButton"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/_10sdp"
        android:src="@drawable/ic_back_arrow"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/car_details_info_textView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/car_details_info_textView"
        app:tint="@color/colorPrimaryDark" />

    <TextView
        android:id="@+id/car_details_info_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_10sdp"
        android:text="@string/car_details"
        android:textSize="@dimen/_20ssp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintStart_toEndOf="@+id/back_imageButton"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/_10sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/car_details_info_textView"
        app:layout_constraintVertical_bias="0.5">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp">

            <androidx.cardview.widget.CardView
                android:id="@+id/main_data_CardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <ImageView
                        android:id="@+id/registration_plate_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_40sdp"
                        android:adjustViewBounds="true"
                        android:contentDescription="@string/registration_number"
                        android:src="@drawable/ic_registration_plate"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.5"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/registration_number_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_25sdp"
                        android:text="@string/registration_number_example"
                        android:textAllCaps="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/_22ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/registration_plate_imageView"
                        app:layout_constraintEnd_toEndOf="@+id/registration_plate_imageView"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="@+id/registration_plate_imageView"
                        app:layout_constraintTop_toTopOf="@+id/registration_plate_imageView" />

                    <TextView
                        android:id="@+id/brand_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_10sdp"
                        android:text="@string/brand"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/registration_plate_imageView" />

                    <TextView
                        android:id="@+id/brand_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/brand_example"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/brand_info_textView"
                        app:layout_constraintStart_toStartOf="@+id/model_value_textView"
                        app:layout_constraintTop_toTopOf="@+id/brand_info_textView" />

                    <TextView
                        android:id="@+id/model_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/model"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/brand_info_textView" />

                    <TextView
                        android:id="@+id/model_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_3sdp"
                        android:text="@string/model_example"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16ssp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/model_info_textView"
                        app:layout_constraintTop_toBottomOf="@id/brand_info_textView" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/production_date_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/main_data_CardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/production_date_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/production_date"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/production_date_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/production_date_example"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/production_date_info_textView"
                        app:layout_constraintStart_toEndOf="@+id/production_date_info_textView"
                        app:layout_constraintTop_toTopOf="@+id/production_date_info_textView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/color_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/production_date_cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/color_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/color"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/car_color_imageView"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="@+id/car_color_imageView" />

                    <ImageView
                        android:id="@+id/car_color_imageView"
                        android:layout_width="wrap_content"
                        android:layout_height="@dimen/_50sdp"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ic_car2"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/color_info_textView"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/owner_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/color_cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/owner_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/owner"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/owner_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/blank"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/owner_info_textView"
                        app:layout_constraintStart_toEndOf="@+id/owner_info_textView"
                        app:layout_constraintTop_toTopOf="@+id/owner_info_textView" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:id="@+id/coordinates_cardView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10sdp"
                android:layout_marginBottom="@dimen/_10sdp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="@dimen/_10sdp"
                app:layout_constraintTop_toBottomOf="@id/owner_cardView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="@dimen/_10sdp">

                    <TextView
                        android:id="@+id/coordinates_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/coordinates"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/latitude_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/latitude"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/coordinates_info_textView" />

                    <TextView
                        android:id="@+id/latitude_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/blank"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/latitude_info_textView"
                        app:layout_constraintStart_toEndOf="@+id/longitude_info_textView"
                        app:layout_constraintTop_toTopOf="@+id/latitude_info_textView" />

                    <TextView
                        android:id="@+id/longitude_info_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:text="@string/longitude"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/_16ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/latitude_info_textView" />

                    <TextView
                        android:id="@+id/longitude_value_textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:text="@string/blank"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="@dimen/_14ssp"
                        app:layout_constraintBottom_toBottomOf="@+id/longitude_info_textView"
                        app:layout_constraintStart_toEndOf="@+id/longitude_info_textView"
                        app:layout_constraintTop_toTopOf="@+id/longitude_info_textView"
                        app:layout_constraintVertical_bias="0.0" />

                    <ImageView
                        android:id="@+id/coordinates_picker_imageButton"
                        android:layout_width="wrap_content"
                        android:layout_height="0dp"
                        android:src="@drawable/ic_location"
                        app:layout_constraintBottom_toBottomOf="@+id/longitude_info_textView"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="1.0"
                        app:layout_constraintStart_toEndOf="@+id/longitude_value_textView"
                        app:layout_constraintTop_toTopOf="@+id/coordinates_info_textView"
                        app:tint="@color/colorAccent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.cardview.widget.CardView>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>