<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/backgroundLightGrey">

    <androidx.cardview.widget.CardView
        android:id="@+id/owner_cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        app:cardBackgroundColor="@color/white"
        app:cardCornerRadius="@dimen/_10sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/_10sdp">

            <TextView
                android:id="@+id/first_name_info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/first_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/first_name_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/blank"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/first_name_info_textView"
                app:layout_constraintStart_toEndOf="@+id/first_name_info_textView"
                app:layout_constraintTop_toTopOf="@+id/first_name_info_textView" />

            <TextView
                android:id="@+id/last_name_info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_3sdp"
                android:text="@string/last_name"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_18ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/first_name_info_textView" />

            <TextView
                android:id="@+id/last_name_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_18ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/last_name_info_textView"
                app:layout_constraintStart_toStartOf="@+id/first_name_value_textView"
                app:layout_constraintTop_toTopOf="@+id/last_name_info_textView" />

            <TextView
                android:id="@+id/birth_date_info_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_5sdp"
                android:text="@string/birth_date"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/_16ssp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/last_name_info_textView" />

            <TextView
                android:id="@+id/birth_date_value_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/blank"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="@+id/birth_date_info_textView"
                app:layout_constraintStart_toStartOf="@+id/first_name_value_textView"
                app:layout_constraintTop_toTopOf="@+id/birth_date_info_textView" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>